--- a/dockerjupyter/Dockerfile
+++ b/dockerjupyter/Dockerfile
@@ -1,16 +1,17 @@
-FROM ubuntu:18.04
+FROM jupyter/r-notebook
 MAINTAINER Brett Beaulieu-Jones
 
 ARG DEBIAN_FRONTEND=noninteractive
-RUN apt-get update
+USER root
 
+RUN apt-get update
 RUN apt-get -y install r-base 
 RUN apt-get -y install r-recommended
 RUN apt-get -y install r-base-dev
 RUN apt-get -y install wget
 RUN apt-get install build-essential libcurl4-gnutls-dev libxml2-dev libssl-dev
 
-RUN Rscript -e 'source("http://bioconductor.org/biocLite.R");biocLite(c("multtest", "affy", "AnnotationDbi"))'
+RUN Rscript -e 'install.packages("BiocManager", repos="http://cran.us.r-project.org");BiocManager::install(c("multtest", "affy", "AnnotationDbi"))'
 
 RUN mkdir -p /data/
 RUN wget -q http://mbni.org/customcdf/18.0.0/entrezg.download/hgu133plus2hsentrezgcdf_18.0.0.tar.gz -P /data
@@ -21,8 +22,8 @@ RUN mkdir -p /data/CELS
 RUN tar -xvf /data/GSE47664_RAW.tar -C /data/CELS
 RUN mkdir -p /plots
 
-RUN R -e "install.packages('testthat');"
-RUN R -e "install.packages('knitr');"
-RUN R -e "install.packages('devtools');"
-RUN R -e "install.packages('roxygen2');"
+RUN R -e "install.packages('testthat', repos='http://cran.us.r-project.org');"
+RUN R -e "install.packages('knitr', repos='http://cran.us.r-project.org');"
+RUN R -e "install.packages('devtools', repos='http://cran.us.r-project.org');"
+RUN R -e "install.packages('roxygen2', repos='http://cran.us.r-project.org');"
 
